--- a/app/src/main/res/layout/activity_equipment_details.xml
+++ b/app/src/main/res/layout/activity_equipment_details.xml
@@ -66,8 +66,10 @@
         ptr:ptrMode="pullFromStart">
 
         <LinearLayout
+            android:id="@+id/llContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:background="@color/while_color"
             android:orientation="vertical">
 
