--- a/app/src/main/res/layout/activity_equipment_release.xml
+++ b/app/src/main/res/layout/activity_equipment_release.xml
@@ -27,7 +27,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="12dp"
                     android:text="标题"
-                    android:textColor="@color/black_color"
+                    android:textColor="@color/theme_color"
                     android:textSize="14sp" />
 
                 <EditText
@@ -65,7 +65,7 @@
                     android:layout_height="wrap_content"
                     android:padding="12dp"
                     android:text="设备"
-                    android:textColor="@color/black_color"
+                    android:textColor="@color/theme_color"
                     android:textSize="14sp" />
 
                 <View
@@ -185,30 +185,42 @@
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
 
-                            <LinearLayout
+                            <RadioGroup
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:gravity="center_vertical">
+                                android:orientation="horizontal">
 
-                                <TextView
-                                    android:id="@+id/tv_degree"
+                                <RadioButton
+                                    android:id="@+id/rdoBtnNew"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:background="@null"
-                                    android:hint="请选择新旧程度"
-                                    android:paddingBottom="12dp"
+                                    android:gravity="center_vertical"
                                     android:paddingTop="12dp"
-                                    android:singleLine="true"
+                                    android:paddingBottom="12dp"
+                                    android:checked="true"
+                                    android:text="全新"
                                     android:textColor="@color/black_color"
-                                    android:textColorHint="@color/light_gray_color"
-                                    android:textSize="14sp" />
+                                    android:textSize="14sp"
+                                    android:button="@null"
+                                    android:drawableLeft="@drawable/selector_checkbox_blue_round"
+                                    android:drawablePadding="5dp"/>
 
-                                <ImageView
+                                <RadioButton
+                                    android:id="@+id/rdoBtnUsed"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:src="@mipmap/icon_arrows_right_01" />
-                            </LinearLayout>
+                                    android:gravity="center_vertical"
+                                    android:paddingTop="12dp"
+                                    android:paddingBottom="12dp"
+                                    android:layout_marginLeft="15dp"
+                                    android:text="二手"
+                                    android:textColor="@color/black_color"
+                                    android:textSize="14sp"
+                                    android:button="@null"
+                                    android:drawableLeft="@drawable/selector_checkbox_blue_round"
+                                    android:drawablePadding="5dp"/>
+
+                            </RadioGroup>
 
                             <View
                                 style="@style/LineStyle"
@@ -291,7 +303,6 @@
                                 android:paddingBottom="12dp"
                                 android:paddingTop="12dp"
                                 android:maxLength="7"
-                                android:inputType="numberDecimal"
                                 android:singleLine="true"
                                 android:textColor="@color/black_color"
                                 android:textColorHint="@color/light_gray_color"
@@ -336,25 +347,14 @@
                 android:layout_height="12dp"
                 android:background="@color/view_background_gray_color" />
 
+
+
+
+
+
+
+
             <View style="@style/LineStyle" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="12dp"
-                    android:text="其他"
-                    android:textColor="@color/black_color"
-                    android:textSize="14sp" />
-
-                <View
-                    style="@style/LineStyle"
-                    android:layout_marginLeft="12dp" />
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -372,7 +372,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="备注说明"
-                        android:textColor="@color/black_color"
+                        android:textColor="@color/theme_color"
                         android:textSize="14sp" />
 
                     <TextView
@@ -387,17 +387,18 @@
                 <EditText
                     android:id="@+id/et_remark"
                     android:layout_width="match_parent"
-                    android:layout_height="90dp"
+                    android:layout_height="wrap_content"
                     android:background="@color/view_background_gray_color"
                     android:gravity="top"
-                    android:hint="      有什么想和买家说的？"
+                    android:hint=" 有什么想和买家说的？"
                     android:inputType="textMultiLine"
                     android:lineSpacingExtra="3dp"
+                    android:minLines="5"
                     android:maxLength="200"
-                    android:paddingTop="12dp"
+                    android:padding="8dp"
                     android:textColor="@color/black_color"
                     android:textColorHint="@color/light_gray_color"
-                    android:textSize="14sp" />
+                    android:textSize="13sp" />
             </LinearLayout>
 
             <View style="@style/LineStyle" />
