--- a/app/src/main/res/layout/activity_stock_shop.xml
+++ b/app/src/main/res/layout/activity_stock_shop.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/view_background_gray_color"
+    android:background="@color/while_color"
     android:orientation="vertical">
 
     <include layout="@layout/layout_header_with_text"/>
@@ -59,12 +59,14 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         android:padding="10dp"
-        android:background="@color/view_background_gray_color"
+        android:background="@color/while_color"
         android:numColumns="5"
         android:horizontalSpacing="6dp"
         android:verticalSpacing="7dp"
         android:stretchMode="columnWidth"/>
 
+
+    <View style="@style/LineStyle" />
 
 
     <LinearLayout
@@ -77,6 +79,7 @@
             android:id="@+id/txtDefault"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/select_white_background"
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
