--- a/app/src/main/res/layout/item_lv_equipment.xml
+++ b/app/src/main/res/layout/item_lv_equipment.xml
@@ -49,22 +49,15 @@
         </RelativeLayout>
 
 
-
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tv_price"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:text="5000元"
+            android:textColor="@color/orange_color"
+            android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/tv_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="5000元"
-                android:textColor="@color/orange_color"
-                android:textSize="14sp" />
-
-        </RelativeLayout>
 
 
         <com.appjumper.silkscreen.view.MyRecyclerView
