--- a/app/src/main/res/layout/activity_release_line.xml
+++ b/app/src/main/res/layout/activity_release_line.xml
@@ -2,17 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/while_color"
     android:orientation="vertical">
 
     <include layout="@layout/layout_header_with_text" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/while_color"
             android:orientation="vertical">
 
@@ -235,7 +237,7 @@
                     android:hint=" 有什么想和买家说的？"
                     android:inputType="textMultiLine"
                     android:lineSpacingExtra="3dp"
-                    android:minLines="5"
+                    android:minLines="7"
                     android:maxLength="200"
                     android:padding="8dp"
                     android:textColor="@color/black_color"
@@ -243,16 +245,24 @@
                     android:textSize="13sp" />
             </LinearLayout>
 
-            <View style="@style/LineStyle" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="12dp"
-                android:background="@color/view_background_gray_color" />
-
 
         </LinearLayout>
     </ScrollView>
+
+
+    <TextView
+        android:id="@+id/txtConfirm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@drawable/selector_btn_blue"
+        android:gravity="center"
+        android:layout_margin="6dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:text="完成"
+        android:textColor="@color/while_color"
+        android:textSize="16sp" />
 
 
 </LinearLayout>
