--- a/app/src/main/res/drawable/selector_text_bg_blue_white.xml
+++ b/app/src/main/res/drawable/selector_text_bg_blue_white.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_selected="true" android:color="#41C7DB"/>
-    <item android:color="@color/while_color"/>
+    <item android:state_selected="true" android:drawable="@color/green_color2"/>
+    <item android:drawable="@color/while_color"/>
 
 </selector>
