--- a/app/src/main/res/drawable/shape_line_search.xml
+++ b/app/src/main/res/drawable/shape_line_search.xml
@@ -3,6 +3,7 @@
     android:shape="rectangle">
 
     <solid android:color="#66FFCC"/>
+    <stroke android:color="@color/light_gray_color" android:width="0.6dp"/>
     <corners android:radius="40dp"/>
 
 </shape>
