--- a/app/src/main/res/layout/activity_line_details.xml
+++ b/app/src/main/res/layout/activity_line_details.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/view_background_gray_color"
     android:orientation="vertical">
+
     <!-- title -->
     <LinearLayout
         android:id="@+id/title_layout"
@@ -56,6 +57,8 @@
                 android:visibility="gone" />
         </RelativeLayout>
     </LinearLayout>
+
+
 
     <com.appjumper.silkscreen.view.scrollView.PullToRefreshScrollView xmlns:ptr="http://schemas.android.com/apk/res-auto"
         android:id="@+id/pull_refresh_scrollview"
@@ -143,191 +146,6 @@
 
 
 
-
-
-            <LinearLayout
-                android:id="@+id/llDetail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <View
-                    style="@style/LineStyle"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginRight="12dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
-                android:paddingTop="18dp">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
-                        android:orientation="horizontal"
-                        android:visibility="gone">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="车型"
-                            android:textColor="@color/light_gray_color"
-                            android:textSize="14sp" />
-
-                        <TextView
-                            android:id="@+id/tv_car_model"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="18dp"
-                            android:text="大卡车"
-                            android:textColor="@color/black_color"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="车宽"
-                            android:textColor="@color/light_gray_color"
-                            android:textSize="14sp" />
-
-                        <TextView
-                            android:id="@+id/tv_car_width"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="12dp"
-                            android:text="36米"
-                            android:textColor="@color/black_color"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="载重"
-                            android:textColor="@color/light_gray_color"
-                            android:textSize="14sp" />
-
-                        <TextView
-                            android:id="@+id/tv_car_load"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="12dp"
-                            android:text="55吨"
-                            android:textColor="@color/black_color"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="车长"
-                            android:textColor="@color/light_gray_color"
-                            android:textSize="14sp" />
-
-                        <TextView
-                            android:id="@+id/tv_car_length"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="12dp"
-                            android:text="22米"
-                            android:textColor="@color/black_color"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="车高"
-                            android:textColor="@color/light_gray_color"
-                            android:textSize="14sp" />
-
-                        <TextView
-                            android:id="@+id/tv_car_height"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="12dp"
-                            android:text="500米"
-                            android:textColor="@color/black_color"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-                </LinearLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="18dp"
-                android:paddingLeft="12dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="发车时间"
-                    android:textColor="@color/light_gray_color"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:id="@+id/tv_data"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:text=""
-                    android:textColor="@color/black_color"
-                    android:textSize="14sp" />
-            </LinearLayout>
-            </LinearLayout>
-
-
-
-
-
             <View
                 style="@style/LineStyle"
                 android:layout_marginLeft="12dp"
@@ -351,10 +169,18 @@
                 android:layout_height="12dp"
                 android:background="@color/view_background_gray_color" />
 
+
+
+
+        <LinearLayout
+            android:id="@+id/rl_company"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <View style="@style/LineStyle" />
 
             <RelativeLayout
-                android:id="@+id/rl_company"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -437,12 +263,34 @@
                         android:textSize="13sp" />
 
                 </LinearLayout>
-
-
             </RelativeLayout>
 
+            <View style="@style/LineStyle" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="12dp"
+                android:background="@color/view_background_gray_color" />
+
+        </LinearLayout>
+
+
+
+
+
+
+
+
+        <LinearLayout
+            android:id="@+id/rl_user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <View style="@style/LineStyle" />
+
             <RelativeLayout
-                android:id="@+id/rl_user"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -517,6 +365,19 @@
                 android:layout_height="12dp"
                 android:background="@color/view_background_gray_color" />
 
+        </LinearLayout>
+
+
+
+
+
+
+        <LinearLayout
+            android:id="@+id/llRecommend"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <View style="@style/LineStyle" />
 
             <TextView
@@ -536,9 +397,7 @@
             <com.appjumper.silkscreen.view.MyListView
                 android:id="@+id/list_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:divider="@color/while_color"
-                android:dividerHeight="0dp">
+                android:layout_height="wrap_content">
 
             </com.appjumper.silkscreen.view.MyListView>
 
@@ -546,6 +405,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="12dp"
                 android:background="@color/view_background_gray_color" />
+        </LinearLayout>
+
+
+
         </LinearLayout>
     </com.appjumper.silkscreen.view.scrollView.PullToRefreshScrollView>
 
