--- a/app/src/main/res/layout/activity_release_line.xml
+++ b/app/src/main/res/layout/activity_release_line.xml
@@ -234,7 +234,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/view_background_gray_color"
                     android:gravity="top"
-                    android:hint=" 有什么想和买家说的？"
+                    android:hint=" 请输入备注说明"
                     android:inputType="textMultiLine"
                     android:lineSpacingExtra="3dp"
                     android:minLines="7"
