--- a/app/src/main/res/layout/fragment_line.xml
+++ b/app/src/main/res/layout/fragment_line.xml
@@ -6,17 +6,18 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/llSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/shape_line_search"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:paddingLeft="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
         android:paddingRight="15dp">
 
         <ImageView
@@ -27,7 +28,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
+            android:layout_marginLeft="10dp"
             android:text="点击输入地点搜索货站"
             android:textColor="@color/text_black_color"
             android:textSize="14sp"/>
@@ -42,6 +43,7 @@
         android:orientation="horizontal">
         
         <ListView
+            android:id="@+id/lvProvince"
             android:layout_width="100dp"
             android:layout_height="match_parent"/>
 
