--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="light_blue_color">#E8F8FF</color>
     <color name="dark_blue_color">#005AA8</color>
     <color name="green_color">#6AC20B</color>
+    <color name="green_color2">#41C7DB</color>
     <color name="orange_color">#FF6000</color>
     <color name="red_color">#FF3B30</color>
     <color name="black_color">#373636</color>
