--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -1,96 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/while_color"
     android:orientation="vertical">
 
-    <include
-        android:id="@+id/llTitle"
-        layout="@layout/layout_header_with_text"/>
+    <include layout="@layout/layout_header_with_text"/>
 
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabLayt"
-        android:layout_width="match_parent"
+    <RadioGroup
+        android:id="@+id/rdoGroup"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/llTitle"
-        android:background="@color/white"
-        app:tabBackground="@color/white"
-        app:tabIndicatorColor="@color/theme_color"
-        app:tabIndicatorHeight="1dp"
-        app:tabTextColor="@color/text_black_color"
-        app:tabSelectedTextColor="@color/theme_color"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="horizontal">
 
-
-    <View
-        android:id="@+id/divider"
-        style="@style/LineStyle"
-        android:layout_below="@id/tabLayt"/>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/divider"/>
-
-
-
-    <LinearLayout
-        android:id="@+id/llLogin"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:background="@color/view_background_gray_color"
-        android:gravity="center"
-        android:layout_below="@id/llTitle"
-        android:orientation="vertical">
-
-        <TextView
+        <RadioButton
+            android:id="@+id/rdoBtnAskBuy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="您还未登录"
-            android:textColor="@color/text_gray_light_color"
-            android:textSize="15sp" />
+            android:background="@drawable/selector_dynamic_head_bg"
+            android:button="@null"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:text="求购"
+            android:textColor="@drawable/selector_text_white_blue"/>
 
-        <TextView
-            android:id="@+id/txtLogin"
+        <RadioButton
+            android:id="@+id/rdoBtnAttention"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/theme_gray_background"
-            android:paddingBottom="9dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:paddingTop="9dp"
-            android:text="立即登录"
-            android:textColor="@color/theme_color"
-            android:textSize="15sp" />
-    </LinearLayout>
+            android:background="@drawable/selector_dynamic_head_bg"
+            android:button="@null"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:text="关注"
+            android:textColor="@drawable/selector_text_white_blue"/>
+
+    </RadioGroup>
 
 
-
-    <LinearLayout
-        android:id="@+id/llEmpty"
+    <FrameLayout
+        android:id="@+id/frameContent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:background="@color/view_background_gray_color"
-        android:gravity="center"
-        android:layout_below="@id/llTitle"
-        android:orientation="vertical">
+        android:layout_height="match_parent"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="请点击右上角添加关注 ~"
-            android:textColor="@color/text_gray_light_color"
-            android:textSize="15sp" />
-
-    </LinearLayout>
-
-
-</RelativeLayout>
+</LinearLayout>
