--- a/app/src/main/res/layout/activity_release_offer.xml
+++ b/app/src/main/res/layout/activity_release_offer.xml
@@ -37,6 +37,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@null"
+                    android:hint="请输入产品单价"
                     android:inputType="numberDecimal"
                     android:textColorHint="@color/light_gray_color"
                     android:textColor="@color/text_black_color"
@@ -47,6 +48,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_item_attent_trans"
+                    android:gravity="center_vertical"
                     android:paddingLeft="10dp"
                     android:paddingRight="6dp"
                     android:paddingTop="5dp"
