--- a/app/src/main/res/drawable/shape_mark_enterprise_bg.xml
+++ b/app/src/main/res/drawable/shape_mark_enterprise_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#9D89F0"/>
-    <corners android:radius="2dp"/>
+    <solid android:color="#B29EFE"/>
+    <corners android:radius="3dp"/>
 
 </shape>
