--- a/app/src/main/res/drawable/shape_mark_official_bg.xml
+++ b/app/src/main/res/drawable/shape_mark_official_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#F2DA9B"/>
-    <corners android:radius="2dp"/>
+    <solid android:color="#FFC59F"/>
+    <corners android:radius="3dp"/>
 
 </shape>
