--- a/app/src/main/res/drawable/shape_mark_person_bg.xml
+++ b/app/src/main/res/drawable/shape_mark_person_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#F4CEF5"/>
-    <corners android:radius="2dp"/>
+    <solid android:color="#FE9FEE"/>
+    <corners android:radius="3dp"/>
 
 </shape>
