--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -5,8 +5,82 @@
     android:background="@color/while_color"
     android:orientation="vertical">
 
-    <include layout="@layout/layout_header_with_text"/>
 
+    <LinearLayout
+        android:id="@+id/title_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/theme_color"
+        android:orientation="vertical">
+
+        <View
+            android:id="@+id/view"
+            style="@style/transparent"
+            android:layout_height="25dp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:padding="12dp"
+                android:src="@mipmap/icon_return" />
+
+            <RadioGroup
+                android:id="@+id/rdoGroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="12dp"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/rdoBtnAskBuy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rb_bg_01"
+                    android:button="@null"
+                    android:paddingLeft="30dp"
+                    android:paddingRight="30dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="求购"
+                    android:textColor="@color/title_text_sel"/>
+
+                <RadioButton
+                    android:id="@+id/rdoBtnAttention"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rb_bg_02"
+                    android:button="@null"
+                    android:paddingLeft="30dp"
+                    android:paddingRight="30dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="关注"
+                    android:textColor="@color/title_text_sel"/>
+
+            </RadioGroup>
+
+            <TextView
+                android:id="@+id/right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:padding="12dp"
+                android:text="发布"
+                android:textColor="@color/while_color"
+                android:textSize="15sp" />
+        </RelativeLayout>
+    </LinearLayout>
+
+<!--
     <RadioGroup
         android:id="@+id/rdoGroup"
         android:layout_width="wrap_content"
@@ -42,7 +116,7 @@
             android:text="关注"
             android:textColor="@drawable/selector_text_white_blue"/>
 
-    </RadioGroup>
+    </RadioGroup>-->
 
 
     <FrameLayout
