--- a/app/src/main/res/layout/item_recycler_ask_buy_list.xml
+++ b/app/src/main/res/layout/item_recycler_ask_buy_list.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/select_white_background"
+    android:descendantFocusability="blocksDescendants"
     android:paddingLeft="12dp"
     android:paddingRight="12dp"
     android:paddingTop="12dp">
