--- a/app/src/main/res/layout/activity_certify_manage.xml
+++ b/app/src/main/res/layout/activity_certify_manage.xml
@@ -409,7 +409,7 @@
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@mipmap/certify_productivity"/>
+                    android:src="@mipmap/plus_truck"/>
 
                 <TextView
                     android:layout_width="wrap_content"
