--- a/app/src/main/res/layout/activity_askbuy_detail.xml
+++ b/app/src/main/res/layout/activity_askbuy_detail.xml
@@ -112,6 +112,11 @@
             </LinearLayout>
 
 
+            <View
+                android:layout_width="1dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="20dp"/>
+
         </LinearLayout>
     </ScrollView>
 
