--- a/app/src/main/res/layout/activity_logistics_list.xml
+++ b/app/src/main/res/layout/activity_logistics_list.xml
@@ -32,52 +32,37 @@
 
             <RadioGroup
                 android:id="@+id/rdoGroup"
-                android:layout_width="200dip"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:layout_gravity="center"
-                android:layout_margin="12dip"
-                android:orientation="horizontal"
-                android:weightSum="3">
+                android:layout_margin="12dp"
+                android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/rb0"
-                    android:layout_width="0dip"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/rb_bg_01"
                     android:button="@null"
                     android:gravity="center"
-                    android:padding="6dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
                     android:text="货站"
                     android:textColor="@color/title_text_sel"
                     android:textSize="14sp" />
 
                 <RadioButton
                     android:id="@+id/rb1"
-                    android:layout_width="0dip"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="-1dp"
-                    android:layout_marginRight="-1dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/rb_bg_03"
-                    android:button="@null"
-                    android:gravity="center"
-                    android:padding="6dp"
-                    android:text="个人"
-                    android:textColor="@color/title_text_sel"
-                    android:textSize="14sp" />
-
-                <RadioButton
-                    android:id="@+id/rb2"
-                    android:layout_width="0dip"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/rb_bg_02"
                     android:button="@null"
                     android:gravity="center"
-                    android:padding="6dp"
-                    android:text="找车"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="空车配货"
                     android:textColor="@color/title_text_sel"
                     android:textSize="14sp" />
             </RadioGroup>
@@ -91,7 +76,7 @@
                 android:padding="12dp"
                 android:text="发布"
                 android:textColor="@color/while_color"
-                android:textSize="16sp" />
+                android:textSize="15sp" />
         </RelativeLayout>
     </LinearLayout>
 
