--- a/app/src/main/res/layout/fragment_my2.xml
+++ b/app/src/main/res/layout/fragment_my2.xml
@@ -264,6 +264,113 @@
 
 
 
+            <LinearLayout
+                android:id="@+id/llDeliver"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/while_color"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="5dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="12dp"
+                            android:textSize="14sp"
+                            android:textColor="@color/text_black_color"
+                            android:text="我的发货订单"/>
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"/>
+
+                        <TextView
+                            android:id="@+id/txtMoreDeliver"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:drawableRight="@mipmap/icon_my_arrows_right"
+                            android:textSize="13sp"
+                            android:textColor="@color/text_gray_light_color"
+                            android:text="查看更多订单"/>
+                    </LinearLayout>
+                </LinearLayout>
+
+
+                <View style="@style/LineStyle" />
+
+                <View
+                    style="@style/LineStyle"
+                    android:layout_marginTop="10dp" />
+            </LinearLayout>
+
+
+
+
+            <LinearLayout
+                android:id="@+id/llDriver"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/while_color"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="5dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="12dp"
+                            android:textSize="14sp"
+                            android:textColor="@color/text_black_color"
+                            android:text="司机订单"/>
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"/>
+
+                        <TextView
+                            android:id="@+id/txtMoreDriver"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:drawableRight="@mipmap/icon_my_arrows_right"
+                            android:textSize="13sp"
+                            android:textColor="@color/text_gray_light_color"
+                            android:text="查看更多订单"/>
+                    </LinearLayout>
+                </LinearLayout>
+
+
+                <View style="@style/LineStyle" />
+
+                <View
+                    style="@style/LineStyle"
+                    android:layout_marginTop="10dp" />
+            </LinearLayout>
+
 
 
 
