--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="green">#72bb38</color>
     <color name="border_gray_light">#D4D4D4</color>
     <color name="text_black_color">#4c4c4c</color>
+    <color name="text_black_color2">#4d4d4d</color>
     <color name="text_black_dark_color">#1a1a1a</color>
     <color name="text_gray_light_color">#858585</color>
     
