--- a/app/src/main/res/layout/fragment_freight.xml
+++ b/app/src/main/res/layout/fragment_freight.xml
@@ -22,9 +22,10 @@
             android:textSize="14sp"/>
 
         <TextView
+            android:id="@+id/txtNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="589车次"
+            android:text="车次"
             android:textColor="#FD7674"
             android:textSize="14sp"/>
     </LinearLayout>
