--- a/app/src/main/res/layout/layout_freight_detail.xml
+++ b/app/src/main/res/layout/layout_freight_detail.xml
@@ -224,6 +224,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/imgViSecurity"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="15dp"
