--- a/app/src/main/res/layout/activity_goto_deliver.xml
+++ b/app/src/main/res/layout/activity_goto_deliver.xml
@@ -70,7 +70,7 @@
                     android:textSize="14sp" />
 
                 <TextView
-                    android:id="@+id/txtNavigate"
+                    android:id="@+id/txtNavi"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
