--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -6,10 +6,10 @@
 
     <include layout="@layout/layout_header_with_text" />
 
-    <com.amap.api.maps2d.MapView
+    <com.amap.api.maps.MapView
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </com.amap.api.maps2d.MapView>
+    </com.amap.api.maps.MapView>
 </LinearLayout>
