--- a/app/src/main/res/layout/activity_personal_authentication.xml
+++ b/app/src/main/res/layout/activity_personal_authentication.xml
@@ -126,6 +126,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@null"
+                        android:maxLength="18"
                         android:hint="请输入身份证号"
                         android:textColor="@color/black_color"
                         android:textSize="13sp"
