--- a/app/src/main/res/layout/dialog_choose_driver.xml
+++ b/app/src/main/res/layout/dialog_choose_driver.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/txtTitle"
@@ -10,15 +9,36 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:gravity="center"
-        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
         android:textColor="#000000"
         android:textSize="16sp"
         android:text="选择司机"/>
+
+    <TextView
+        android:id="@+id/txtConfirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/selector_btn_blue"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:text="确认选择"
+        android:textColor="@color/while_color"
+        android:textSize="15sp" />
 
     <ListView
         android:id="@+id/lvRecord"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/txtTitle"
+        android:layout_above="@id/txtConfirm"
         android:layout_marginTop="15dp"/>
 
-</LinearLayout>
+
+</RelativeLayout>
