--- a/app/src/main/res/layout/dialog_confirm_arrived.xml
+++ b/app/src/main/res/layout/dialog_confirm_arrived.xml
@@ -37,5 +37,21 @@
         android:layout_gravity="center_horizontal"
         android:src="@mipmap/icon_uploading"/>
 
+    <TextView
+        android:id="@+id/txtConfirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/selector_btn_blue"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:text="完成"
+        android:textColor="@color/while_color"
+        android:textSize="15sp" />
+
 
 </LinearLayout>
