--- a/app/src/main/res/layout/activity_goto_deliver.xml
+++ b/app/src/main/res/layout/activity_goto_deliver.xml
@@ -8,6 +8,7 @@
     <include layout="@layout/layout_header_with_text"/>
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -43,6 +44,21 @@
                     android:layout_marginTop="10dp"/>
 
 
+                <com.appjumper.silkscreen.view.MapContainer
+                    android:id="@+id/mapContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="12dp">
+
+                    <com.amap.api.maps.MapView
+                        android:id="@+id/map"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                </com.appjumper.silkscreen.view.MapContainer>
+
+
             </LinearLayout>
 
 
@@ -67,7 +83,7 @@
                     android:paddingBottom="10dp"
                     android:text="联系厂家"
                     android:textColor="@color/while_color"
-                    android:textSize="14sp" />
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/txtNavi"
@@ -81,7 +97,7 @@
                     android:paddingBottom="10dp"
                     android:text="导航去厂家"
                     android:textColor="@color/while_color"
-                    android:textSize="14sp" />
+                    android:textSize="15sp" />
 
             </LinearLayout>
 
