--- a/app/src/main/res/layout/activity_loading_deliver.xml
+++ b/app/src/main/res/layout/activity_loading_deliver.xml
@@ -34,7 +34,53 @@
                 android:textSize="13sp"
                 android:textColor="@color/theme_color"/>
 
-            <include layout="@layout/layout_freight_logistics_data"/>
+
+            <include layout="@layout/layout_freight_transport"/>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:gravity="center"
+                    android:text="预计运达时间"
+                    android:textSize="14sp"
+                    android:textColor="@color/text_black_color2"/>
+
+                <TextView
+                    android:id="@+id/txtExpectDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/shape_item_attent_trans"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:drawableRight="@mipmap/icon_arrows_down"
+                    android:text=""
+                    android:hint="请选择预计运达时间"
+                    android:textColor="@color/text_black_color2"
+                    android:textColorHint="@color/light_gray_color"
+                    android:textSize="13sp"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text=""
+                    android:textSize="14sp"
+                    android:textColor="@color/text_black_color"/>
+            </LinearLayout>
 
 
         </LinearLayout>
