--- a/app/src/main/res/layout/item_lv_exhibition.xml
+++ b/app/src/main/res/layout/item_lv_exhibition.xml
@@ -38,9 +38,13 @@
 
         <TextView
             android:id="@+id/tv_distance"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@id/tv_time"
+            android:layout_marginLeft="10dp"
+            android:gravity="right"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:layout_marginRight="12dp"
             android:text="宝安中心 | 5.5km"
             android:textColor="@color/light_gray_color"
