--- a/app/src/main/res/layout/item_recycler_freight_my.xml
+++ b/app/src/main/res/layout/item_recycler_freight_my.xml
@@ -5,38 +5,6 @@
     android:background="@drawable/select_white_background"
     android:orientation="vertical">
 
-    <View style="@style/LineStyle"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/txtOrderId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="12dp"
-            android:text="订单编号 : 2017102009432501"
-            android:textColor="@color/text_black_color2"
-            android:textSize="14sp"/>
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-
-        <TextView
-            android:id="@+id/txtDetail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableRight="@mipmap/icon_home_arrows_right04"
-            android:drawablePadding="5dp"
-            android:padding="12dp"
-            android:text="查看详情"
-            android:textColor="@color/text_gray_light_color"
-            android:textSize="13sp"/>
-    </LinearLayout>
 
     <View
         style="@style/LineStyle"
@@ -51,7 +19,7 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingLeft="12dp"
+            android:paddingLeft="17dp"
             android:paddingTop="12dp"
             android:paddingRight="12dp"
             android:layout_weight="2">
@@ -142,9 +110,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/llHandle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:paddingTop="8dp"
@@ -197,13 +165,5 @@
             android:textSize="13sp" />
     </LinearLayout>
 
-    <View
-        style="@style/LineStyle"
-        android:layout_marginTop="12dp"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@color/view_background_gray_color"/>
 
 </LinearLayout>
