--- a/app/src/main/res/layout/fragment_my2.xml
+++ b/app/src/main/res/layout/fragment_my2.xml
@@ -327,6 +327,8 @@
 
 
 
+
+
             <LinearLayout
                 android:id="@+id/llDriver"
                 android:layout_width="match_parent"
@@ -348,6 +350,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/txtDriverNum"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="12dp"
@@ -373,51 +376,65 @@
                     </LinearLayout>
 
 
-                    <View
-                        style="@style/LineStyle"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginRight="12dp"/>
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recyclerDriver"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:nestedScrollingEnabled="false"/>
 
 
                     <LinearLayout
+                        android:id="@+id/llChangeState"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center_horizontal"
-                        android:paddingTop="12dp"
-                        android:paddingBottom="12dp"
-                        android:paddingLeft="50dp"
-                        android:paddingRight="50dp">
-
-                        <TextView
-                            android:id="@+id/txtUpdateLocation"
-                            android:layout_width="100dp"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/selector_btn_blue"
-                            android:gravity="center"
-                            android:paddingTop="6dp"
-                            android:paddingBottom="6dp"
-                            android:text="更新位置"
-                            android:textColor="@color/while_color"
-                            android:textSize="13sp" />
+                        android:visibility="gone"
+                        android:orientation="vertical">
 
                         <View
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:layout_weight="1"/>
+                            style="@style/LineStyle"
+                            android:layout_marginLeft="12dp"
+                            android:layout_marginRight="12dp"/>
 
-                        <TextView
-                            android:id="@+id/txtDriverState"
-                            android:layout_width="100dp"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/selector_btn_blue"
-                            android:gravity="center"
-                            android:paddingTop="6dp"
-                            android:paddingBottom="6dp"
-                            android:text="更改为运输中"
-                            android:textColor="@color/while_color"
-                            android:textSize="13sp" />
+                            android:orientation="horizontal"
+                            android:gravity="center_horizontal"
+                            android:paddingTop="12dp"
+                            android:paddingBottom="12dp"
+                            android:paddingLeft="50dp"
+                            android:paddingRight="50dp">
 
+                            <TextView
+                                android:id="@+id/txtUpdateLocation"
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/selector_btn_blue"
+                                android:gravity="center"
+                                android:paddingTop="6dp"
+                                android:paddingBottom="6dp"
+                                android:text="更新位置"
+                                android:textColor="@color/while_color"
+                                android:textSize="13sp" />
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
+                                android:layout_weight="1"/>
+
+                            <TextView
+                                android:id="@+id/txtDriverState"
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/selector_btn_blue"
+                                android:gravity="center"
+                                android:paddingTop="6dp"
+                                android:paddingBottom="6dp"
+                                android:text="更改为运输中"
+                                android:textColor="@color/while_color"
+                                android:textSize="13sp" />
+
+                        </LinearLayout>
                     </LinearLayout>
 
 
@@ -430,6 +447,11 @@
                     style="@style/LineStyle"
                     android:layout_marginTop="10dp" />
             </LinearLayout>
+
+
+
+
+
 
 
 
