--- a/app/src/main/res/layout/view_holder_result.xml
+++ b/app/src/main/res/layout/view_holder_result.xml
@@ -3,6 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/select_white_background"
     android:padding="8dp"
     android:gravity="center_vertical">
 
