--- a/app/src/main/res/layout/activity_transporting_deliver.xml
+++ b/app/src/main/res/layout/activity_transporting_deliver.xml
@@ -68,6 +68,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:visibility="gone"
             android:layout_marginLeft="50dp"
             android:background="@drawable/selector_btn_blue"
             android:gravity="center"
