--- a/app/src/main/res/layout/layout_freight_transport.xml
+++ b/app/src/main/res/layout/layout_freight_transport.xml
@@ -19,7 +19,7 @@
     <com.appjumper.silkscreen.view.MyListView
         android:id="@+id/lvTransport"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginBottom="40dp"
         android:dividerHeight="0dp"
         android:divider="@color/transparent_color"/>
